# HealthFlow

./: .env.example  .gitignore  BENCHMARK_REPRODUCIBILITY.md  CLAUDE.md  README.md  app.py  config.toml  config.toml.example  example_mcp_usage.py  pyproject.toml  run_benchmark.py  run_healthflow.py  run_training.py
assets/demo/: icu_mortality_cohort.csv
data/: BENCHMARK_REPRODUCIBILITY.md  rebuild_all.py
data/curebench/: README.md
data/ehrflowbench/: README.md
data/hle/: README.md
data/medagentsbench/: README.md
data/tools/: first_class_mc_eval.py  medagentboard_llm_eval.py
examples/: complete_demo.py
extract_task/: config.py  extract.py  extract_tasks.py  run.sh
filter_paper/: filter.py  run.sh
healthflow/: __init__.py  __main__.py  artifacts.py  cli.py  interactive_cli.py  reporting.py  runtime_artifacts.py  session.py  session_client.py  showcase.py  system.py  web_app.py
healthflow/agents/: evaluator_agent.py  meta_agent.py  reflector_agent.py  task_decomposer_agent.py
healthflow/benchmarks/: __init__.py  common.py  deterministic_eval.py  ehr_benchmark_builders.py  mimic_demo.py  multiple_choice.py  simple.py
healthflow/core/: __init__.py  agent.py  config.py  contracts.py  direct_responses.py  enhanced_logger.py  enhanced_logging.py  evolution.py  evolution_config.py  interpreter.py  llm_provider.py  memory.py  prompts.py  react_agent.py  rewards.py  security.py  simple_interpreter.py  simple_prompts.py
healthflow/ehr/: __init__.py  models.py  profiling.py  risk.py  tasking.py
healthflow/evaluation/: __init__.py  evaluator.py
healthflow/execution/: __init__.py  base.py  claude_executor.py  cli_adapters.py  factory.py  opencode_parser.py  policy.py
healthflow/experience/: experience_manager.py  experience_models.py
healthflow/prompts/: templates.py
healthflow/reporting/: README.md  __init__.py  report_summarizer.py
platform/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
scripts/: start_healthflow_platform.sh  start_healthflow_web.sh
tests/: test_artifacts.py  test_benchmark_rebuild.py  test_benchmark_runner.py  test_cancellation.py  test_cli.py  test_config.py  test_direct_responses.py  test_ehr.py  test_ehrflowbench_curation.py  test_ehrflowbench_export_subset.py  test_ehrflowbench_generate_tasks.py  test_ehrflowbench_score_tasks.py  test_execution.py  test_first_class_mc_eval.py  test_interactive_cli.py  test_llm_provider.py  test_medagentboard_llm_eval.py  test_memory.py  test_prompts.py  test_reflector_agent.py  test_reporting.py  test_system.py  test_task_sessions.py  test_training_runner.py  test_verification.py  test_web_api.py  test_web_app.py  validate_executor_tools.py
title_extract/: aaai.py  icml.py  readme.md  www.py
tmp/: medagentboard_missing_info.md
utils/: xml_to_jsonl.py
web/: app.js  index.html  styles.css
(+691 files in other folders)
