[project]
name = "healthflow"
version = "0.1.0"
description = "Self-Evolving LLM Agent for Healthcare with Experience Accumulation and Tool Creation"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["healthcare", "ai", "llm", "agents", "self-evolving", "medical", "agentic"]

dependencies = [
    "aiofiles>=24.1.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "openai>=1.97.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.7",
    "rich>=14.1.0",
    "scikit-learn>=1.6.1",
    "tenacity>=9.1.2",
    "toml>=0.10.2",
    "typer>=0.16.0",
]

[project.scripts]
healthflow = "run_healthflow:app"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["healthflow"]
